--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
     <header>
         <div class="logo-container">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Embraer_logo.svg/2560px-Embraer_logo.svg.png" alt="Logo Embraer" class="logo">
-            <h1 class="app-title">Sistema de Validação com Aprovação - Embarques Aéreos</h1>
+            <h1 class="app-title">Sistema de Validação RA - Embarques Aéreos EMBRAER</h1>
         </div>
         <div class="user-controls">
             <select id="userSelector" class="user-selector">
